--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </header>
 
             <h1>Путешествуй <br> Pero travel</h1>
-            <button class="btn">К экскурсиям</button>
+            <button class="btn">К экскурсиям →</button>
 
         </div>
     </section>
